adding REST/gRPC-to-Graphl services for Service creation from image/repo
